server/kindle-weather-display-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kindle-weather
  labels:
    app: kindle-weather
    name: kindle-weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kindle-weather
  template:
    metadata:
      labels:
        app: kindle-weather
        name: kindle-weather
    spec:
      containers:
      - name: kindle-weather
        image: quay.io/bostrt/kindle-weather-display:latest
        ports:
        - containerPort: 80
