server/kindle-weather-display-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kindle-weather
  name: kindle-weather
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: kindle-weather
  sessionAffinity: None
  type: ClusterIP
